# Macrobot

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs  websocket.rs
src/macro_dsl/: errors.rs  keys.rs  mod.rs
src/sgf/: App.java  FunctionWithException.java  KeyCommand.java  KeyCommandException.java  Server.java  Util.java
website/: README.md  package-lock.json  package.json  rollup.config.js
website/public/: global.css  index.html
website/src/: App.svelte  ButtonPanel.ts  Grid.svelte  MacroButton.ts  MacroConfig.svelte  Macrobot.d.ts  Navbar.svelte  PanelController.ts  api.ts  global.scss  main.ts  util.ts  variables.scss
website/src/components/: Grid.svelte  MacroModal.svelte  Navbar.svelte
website/src/components/modals/: MacroConfig.svelte  PanelConfig.svelte
website/src/model/: ButtonPanel.ts  MacroButton.ts  PanelController.ts
