[package]
name = "macrobot"
version = "0.1.0"
authors = ["Nolan Rosen <nolanrosen15@gmail.com>", "Scott Fasone"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.1"
enigo = "0.0.14"
actix = "0.10.0"
actix-files = "0.4.0"
actix-web = "3.1.0"
actix-web-actors = "3.0.0"