[package]
name = "macrobot"
version = "0.0.1"
authors = [
    "Nolan Rosen <nolanrosen15@gmail.com>",
    "Scott Fasone <scott181182@yahoo.com>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-files = "0.4.0"
actix-web = "3.1.0"
actix-web-actors = "3.0.0"
enigo = "0.0.14"
env_logger = "0.8.1"
log = "0.4.0"
phf = { version = "0.8.0", features = [ "macros" ] }